--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@
 
 DATABASE_URL="postgresql://postgres:admin@5432@localhost:5432/readifydb?schema=public"
 JWT_CONSTANT="readify"
+AWS_BUCKET="readifybucket"
 AWS_S3_REGION="eu-north-1"
 AWS_ACCESS_KEY_ID="AKIATXSS2WEV2G6PRQX6"
 AWS_SECRET_ACCESS_KEY="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"
