--- a/package.json
+++ b/package.json
@@ -26,15 +26,18 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
-    "@prisma/client": "^5.2.0",
+    "@prisma/client": "^5.3.0",
     "@types/passport-jwt": "^3.0.9",
     "argon2": "^0.31.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "gtts": "^0.2.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "text-summarization": "^1.0.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
