abstracted the s3Client instance to it's own service and updated the download service to return a link to the object instead of the streamable file

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:admin@5432@localhost:5432/readifydb?schema=public"
+DATABASE_URL="postgresql://postgres:readifydb.cm90qcnhhywp.eu-north-1.rds.amazonaws.com:5432/readifydb"
 JWT_CONSTANT="readify"
 AWS_BUCKET="readifybucket"
 AWS_S3_REGION="eu-north-1"
